2009-06-25  Elliott Baron  <ebaron@redhat.com>

	* ValgrindLaunchConfigurationDelegate.java: Removed unused code.

2009-06-23  Elliott Baron  <ebaron@redhat.com>

	* ValgrindExportWizardPage.java (getSelectAllButton): Created getter.
	(getViewer): Likewise.
	(getDeselectAllButton): Likewise. 
	(getDestText): Likewise.
	* src/org/eclipse/linuxtools/valgrind/launch/ValgrindLaunchPlugin.java (getValgrindCommand): 
	(setValgrindCommand): 
	* src/org/eclipse/linuxtools/valgrind/launch/ValgrindOptionsTab.java (getMainStackSizeButton): Created getter.
	(getMaxStackFrameSpinner): Likewise.
	(getNumCallersSpinner): Likewise.
	(loadDynamicTab): Renamed from getDynamicTab.
	(getShowBelowMainButton): Created getter.
	(loadDynamicArea): Call loadDynamicTab.
	(getTraceChildrenButton): Created getter.
	(getRunFreeresButton): Likewise.
	(getErrorLimitButton): Likewise.
	(getTools): Likewise.
	(getToolsCombo): Likewise.
	(getMainStackSizeSpinner): Likewise.
	(getDemangleButton): Likewise.
	(getChildSilentButton): Likewise.
	(getSuppFileText): Likewise.
	(getDynamicTab): Likewise.

2009-06-22  Elliott Baron  <ebaron@redhat.com>

	* messages.properties: New key.
	* ValgrindLaunchConfigurationDelegate.java (launch): Perform version check.
	* ValgrindLaunchPlugin.java (getValgrindVersion): Compare installed Valgrind
	version to minimum supported version.

2009-05-28  Elliott Baron  <ebaron@redhat.com>

	* ValgrindLaunchPlugin.java (findValgrindVersion): Call findValgrindLocation first if necessary.

2009-05-27  Elliott Baron  <ebaron@redhat.com>

	* ValgrindLaunchPlugin.java (setValgrindLocation): Setter for use by test suite.
	(setValgrindVersion): Likewise.
	(findValgrindLocation): Made into private helper.
	(findValgrindVersion): Likewise.
	(getValgrindLocation): Use instead of find*.
	(getValgrindVersion): Likewise.
	* ValgrindLaunchConfigurationDelegate.java: Changed for above.
	* ValgrindOptionsTab.java: Likewise. 

2009-05-26  Elliott Baron  <ebaron@redhat.com>
