@@ -1,3 +1,7 @@
+2009-07-09  Elliott Baron  <ebaron@redhat.com>
+
+	* MemcheckToolPage.java: Display version exceptions only in tab's errorMessage.
+
 2009-07-07  Elliott Baron  <ebaron@redhat.com>
 
 	* MemcheckLaunchConstants.java: Added option for turning off leak check.
