@@ -1,3 +1,8 @@
+2009-07-09  Elliott Baron  <ebaron@redhat.com>
+
+	* ValgrindLaunchPlugin.java (parseWSPath): Don't report undef variables as errors.
+	* ValgrindOptionsTab.java: Display version exceptions only in tab's errorMessage.
+
 2009-06-25  Elliott Baron  <ebaron@redhat.com>
 
 	* ValgrindLaunchConfigurationDelegate.java: Removed unused code.
